--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "main": "index.js",
+  "version": "0.0.1",
+  "description": "A simple password manager app for iOS and Android developed in React Native",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sharanagouda/password-manager"
+  },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -7,18 +13,54 @@
     "start": "react-native start",
     "test": "jest"
   },
+  "author": {
+    "name": "Sharanagouda Konasirasagi",
+    "email": "sharanu.mdl@gmail.com",
+    "url": "https://github.com/sharanagouda"
+  },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "@eva-design/eva": "^2.0.0",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.3",
+    "@react-navigation/native": "^5.9.0",
+    "@react-navigation/stack": "^5.13.0",
+    "@ui-kitten/components": "^5.0.0",
+    "@ui-kitten/eva-icons": "^5.0.0",
+    "@ui-kitten/template-js": "^5.0.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "apollo-upload-client": "^14.1.3",
+    "deepmerge": "^4.2.2",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "graphql": "^15.4.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-appearance": "^0.3.4",
+    "react-native-config": "^1.4.1",
+    "react-native-crypto": "^2.2.0",
+    "react-native-crypto-js": "^1.0.0",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-password-strength-meter": "^0.0.5",
+    "react-native-rate": "^1.2.4",
     "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.15.0",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.16.1",
+    "react-native-simple-toast": "^1.1.3",
+    "react-native-svg": "^12.1.0",
     "react-native-unimodules": "~0.12.0",
+    "react-native-uuid-generator": "^6.1.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
