--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-uuid-generator": "^6.1.1",
